<resources>
    <string name="app_name">donation</string>
    <string name="menu_notification">Notificações</string>
    <string name="menu_info">FAQ</string>
    <string name="menu_home">Início</string>
    <string name="menu_map">Homocentros</string>
    <string name="menu_profile">Perfil</string>
    <string name="schedule">Agendar</string>
    <string name="blood_type">Tipo Sanguíneo</string>
    <string name="next_donation">Apto para doar na data acima</string>
    <string name="saved_lives">Vidas salvas</string>
    <string name="last_donation">Última doação</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>